--- a/contact.html
+++ b/contact.html
@@ -37,12 +37,17 @@
         .info-item p { font-size: 1.1rem; margin: 0; }
         .info-item a { color: var(--gold-dark); text-decoration: none; font-weight: 600; }
         
+        /* Form Section */
         .contact-form-section { background: linear-gradient(to bottom, var(--cream), var(--white)); padding: 3rem; border-radius: 20px; box-shadow: 0 20px 60px rgba(10, 22, 40, 0.1); }
+        .contact-form-section h3 { margin-bottom: 2.5rem; } /* Added space between title and first input */
         .form-group { margin-bottom: 2rem; }
         .form-group label { display: block; margin-bottom: 0.5rem; font-weight: 600; }
         .form-group input, .form-group textarea, .form-group select { width: 100%; padding: 1rem; border: 2px solid var(--cream); border-radius: 10px; font-family: 'Inter', sans-serif; font-size: 1rem; }
         .submit-btn { width: 100%; padding: 1.3rem; background: var(--gold); color: var(--navy); border: none; border-radius: 50px; font-weight: 700; cursor: pointer; text-transform: uppercase; letter-spacing: 1px; transition: 0.3s; }
         .submit-btn:hover { background: var(--gold-dark); transform: translateY(-2px); }
+
+        /* Icon Styling */
+        .brand-icon { filter: url(#glow-brand); flex-shrink: 0; }
 
         .reasons-section { background: var(--navy); color: var(--white); padding: 6rem 2rem; margin-top: 4rem; }
         .reasons-section h2 { font-size: 3rem; color: var(--white); text-align: center; margin-bottom: 4rem; }
@@ -53,7 +58,6 @@
         .reason-card p { font-size: 1.05rem; line-height: 1.8; }
 
         footer { background: #05090f; color: var(--white); padding: 4rem 2rem 2rem; text-align: center; }
-        footer a { color: var(--gold); text-decoration: none; }
 
         @media (max-width: 968px) {
             .hamburger { display: flex; }
@@ -65,6 +69,22 @@
     </style>
 </head>
 <body>
+    <svg style="display: none;">
+        <defs>
+            <linearGradient id="grad-brand" x1="0%" y1="0%" x2="100%" y2="100%">
+                <stop offset="0%" style="stop-color:#c9a961"/>
+                <stop offset="100%" style="stop-color:#d4b976"/>
+            </linearGradient>
+            <filter id="glow-brand" x="-20%" y="-20%" width="140%" height="140%">
+                <feGaussianBlur stdDeviation="0.8" result="coloredBlur"/>
+                <feMerge>
+                    <feMergeNode in="coloredBlur"/>
+                    <feMergeNode in="SourceGraphic"/>
+                </feMerge>
+            </filter>
+        </defs>
+    </svg>
+
     <nav>
         <div class="nav-container">
             <a href="index.html" class="logo">QUOC-BAO NGUYEN, MD</a>
@@ -93,40 +113,51 @@
 
             <div class="info-item">
                 <h3>
-                    <svg width="22" height="22" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <defs>
-                            <linearGradient id="grad-loc-brand" x1="0%" y1="0%" x2="100%" y2="100%">
-                                <stop offset="0%" style="stop-color:#c9a961"/><stop offset="100%" style="stop-color:#d4b976"/>
-                            </linearGradient>
-                            <filter id="glow-loc-brand"><feGaussianBlur stdDeviation="0.8" result="coloredBlur"/><feMerge><feMergeNode in="coloredBlur"/><feMergeNode in="SourceGraphic"/></feMerge></filter>
-                        </defs>
-                        <path d="M10 3 C7 3 5 5 5 7.5 C5 11 10 17 10 17 C10 17 15 11 15 7.5 C15 5 13 3 10 3 Z" stroke="url(#grad-loc-brand)" stroke-width="1.5" fill="none" filter="url(#glow-loc-brand)"/>
-                        <circle cx="10" cy="7.5" r="2" fill="url(#grad-loc-brand)" opacity="0.8"/>
+                    <svg width="24" height="24" viewBox="0 0 20 20" class="brand-icon" fill="none">
+                        <path d="M10 3 C7 3 5 5 5 7.5 C5 11 10 17 10 17 C10 17 15 11 15 7.5 C15 5 13 3 10 3 Z" stroke="url(#grad-brand)" stroke-width="1.5"/>
+                        <circle cx="10" cy="7.5" r="2" fill="url(#grad-brand)" opacity="0.8"/>
                     </svg>
                     Location
                 </h3>
                 <p><strong>Central Austin Dermatology & Aesthetics</strong><br>
                 2700 W Anderson Ln. Unit 403<br>Austin, TX 78757</p>
                 <p style="margin-top: 1rem;">
-                    <a href="https://www.google.com/maps/dir/?api=1&destination=2700+W+Anderson+Ln+Unit+403+Austin+TX+78757" target="_blank" style="display: inline-block; padding: 0.8rem 1.5rem; background: var(--gold); color: var(--navy); border-radius: 25px; text-decoration: none; font-weight: 600;">
-                        Get Directions 🗺️
+                    <a href="http://googleusercontent.com/maps.google.com/3" target="_blank" style="display: inline-block; padding: 0.8rem 1.5rem; background: var(--gold); color: var(--navy); border-radius: 25px; text-decoration: none; font-weight: 600; font-size: 0.9rem;">
+                        Get Directions
                     </a>
                 </p>
             </div>
 
             <div class="info-item">
-                <h3>Email</h3>
+                <h3>
+                    <svg width="24" height="24" viewBox="0 0 24 24" class="brand-icon" fill="none" stroke="url(#grad-brand)" stroke-width="1.5">
+                        <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+                        <path d="M22 6l-10 7L2 6"/>
+                    </svg>
+                    Email
+                </h3>
                 <p><a href="mailto:dr.nguyen.assistant@gmail.com">dr.nguyen.assistant@gmail.com</a></p>
             </div>
 
             <div class="info-item">
-                <h3>Phone</h3>
+                <h3>
+                    <svg width="24" height="24" viewBox="0 0 24 24" class="brand-icon" fill="none" stroke="url(#grad-brand)" stroke-width="1.5">
+                        <path d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72 12.81 12.81 0 00.62 2.81 2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45 12.81 12.81 0 002.81.62A2 2 0 0122 16.92z"/>
+                    </svg>
+                    Phone
+                </h3>
                 <p><strong>Office:</strong> <a href="tel:+15127863498">(512) 786-3498</a></p>
                 <p style="margin-top: 0.5rem;"><strong>Assistant:</strong> <a href="tel:+15125882183">(512) 588-2183</a></p>
             </div>
 
             <div class="info-item">
-                <h3>Office Hours</h3>
+                <h3>
+                    <svg width="24" height="24" viewBox="0 0 24 24" class="brand-icon" fill="none" stroke="url(#grad-brand)" stroke-width="1.5">
+                        <circle cx="12" cy="12" r="10"/>
+                        <path d="M12 6v6l4 2"/>
+                    </svg>
+                    Office Hours
+                </h3>
                 <p>Monday - Friday: 8:00 AM - 5:00 PM</p>
             </div>
         </div>
@@ -153,7 +184,6 @@
                         <option value="Consultation">Schedule Consultation</option>
                         <option value="Speaking">Speaking Engagement</option>
                         <option value="BaoMD">BaoMD Skincare</option>
-                        <option value="Media">Media Inquiry</option>
                         <option value="Other">Other</option>
                     </select>
                 </div>
@@ -214,8 +244,8 @@
                 method: "POST", body: data, headers: { 'Accept': 'application/json' }
             }).then(response => {
                 if (response.ok) { window.location.href = "https://baomd.us/thank-you.html"; }
-                else { response.json().then(data => { status.style.display = "block"; status.style.color = "red"; status.innerText = "Error: " + data.errors.map(error => error.message).join(", "); btn.disabled = false; btn.innerText = "Send Message"; }) }
-            }).catch(error => { status.style.display = "block"; status.style.color = "red"; status.innerText = "Oops! There was a problem."; btn.disabled = false; btn.innerText = "Send Message"; });
+                else { status.style.display = "block"; status.innerText = "Oops! Error."; btn.disabled = false; btn.innerText = "Send Message"; }
+            }).catch(() => { status.style.display = "block"; status.innerText = "Error."; btn.disabled = false; btn.innerText = "Send Message"; });
         });
     </script>
 </body>
