--- a/blogs.html
+++ b/blogs.html
@@ -117,6 +117,7 @@
                 <div class="filter-buttons">
                     <button class="filter-btn active" data-filter="all">All</button>
                     <button class="filter-btn" data-filter="medical">Medical</button>
+                    <button class="filter-btn" data-filter="aesthetics">Aesthetics</button>
                     <button class="filter-btn" data-filter="leadership">Leadership</button>
                     <button class="filter-btn" data-filter="finance">Finance</button>
                     <button class="filter-btn" data-filter="research">Research</button>
@@ -169,6 +170,46 @@
                 date: 'Nov 19',
                 link: 'blog-clinical-trials.html',
                 img: 'https://images.unsplash.com/photo-1582719471384-894fbb16e074?w=400&q=80'
+            },
+            {
+                cat: 'medical',
+                title: 'Full-Body Skin Imaging, AI, and Governance',
+                excerpt: 'Precision requires guardrails in AI-powered skin cancer detection.',
+                date: 'Nov 24',
+                link: 'blog-full-body-imaging-ai.html',
+                img: 'https://images.unsplash.com/photo-1576091160550-2173dba999ef?w=400&q=80'
+            },
+            {
+                cat: 'aesthetics',
+                title: 'Neuromodulators in Aesthetic Dermatology',
+                excerpt: 'Enhancing balance and expression through thoughtful neuromodulator use.',
+                date: 'Nov 28',
+                link: 'blog-neuromodulators.html',
+                img: 'https://images.unsplash.com/photo-1512290923902-8a9f81dc236c?w=400&q=80'
+            },
+            {
+                cat: 'aesthetics',
+                title: 'Dermal Fillers and Fat Transfer',
+                excerpt: 'Volume restoration techniques for natural, lasting results.',
+                date: 'Dec 3',
+                link: 'blog-dermal-fillers.html',
+                img: 'https://images.unsplash.com/photo-1519494026892-80bbd2d6fd0d?w=400&q=80'
+            },
+            {
+                cat: 'medical',
+                title: 'Skin Cancer: Detection and Prevention',
+                excerpt: 'When to see a dermatologist and what you need to know.',
+                date: 'Dec 7',
+                link: 'blog-skin-cancer-detection.html',
+                img: 'https://images.unsplash.com/photo-1579154204601-01588f351e67?w=400&q=80'
+            },
+            {
+                cat: 'finance',
+                title: 'Medical Real Estate: Equity Strategies',
+                excerpt: 'Building wealth through physician facility ownership.',
+                date: 'Dec 12',
+                link: 'blog-medical-real-estate.html',
+                img: 'https://images.unsplash.com/photo-1560518883-ce09059eeffa?w=400&q=80'
             }
         ];
 
