--- a/blogs.html
+++ b/blogs.html
@@ -132,6 +132,46 @@
     <script>
         const allPosts = [
             {
+                cat: 'medical',
+                title: 'Antioxidants in Dermatology: Protecting Skin at the Molecular Level',
+                excerpt: 'How antioxidants neutralize free radicals and enhance long-term skin health.',
+                date: 'Jan 14',
+                link: 'blog-antioxidants-dermatology.html',
+                img: 'https://images.unsplash.com/photo-1556228720-195a672e8a03?w=400&q=80'
+            },
+            {
+                cat: 'aesthetics',
+                title: 'Cosmetic Dermatology in Skin of Color: Precision, Not Imitation',
+                excerpt: 'Safe and effective cosmetic treatments require understanding of pigment biology.',
+                date: 'Jan 11',
+                link: 'blog-skin-of-color-cosmetics.html',
+                img: 'https://images.unsplash.com/photo-1531299204812-e6d44d9a185c?w=400&q=80'
+            },
+            {
+                cat: 'medical',
+                title: 'Retinoids: From Acne Treatment to Cornerstone of Modern Dermatology',
+                excerpt: 'The evolution and enduring relevance of retinoids in dermatologic care.',
+                date: 'Jan 8',
+                link: 'blog-retinoids-evolution.html',
+                img: 'https://images.unsplash.com/photo-1556228852-80cd3b6e5d36?w=400&q=80'
+            },
+            {
+                cat: 'medical',
+                title: 'Hair Restoration: Medical Therapy, Supplements, and Procedural Options',
+                excerpt: 'Evidence-based approaches to treating hair loss with long-term results.',
+                date: 'Jan 5',
+                link: 'blog-hair-restoration.html',
+                img: 'https://images.unsplash.com/photo-1519699047748-de8e457a634e?w=400&q=80'
+            },
+            {
+                cat: 'aesthetics',
+                title: 'Anti-Aging Skincare Ingredients That Actually Matter',
+                excerpt: 'Evidence-based ingredients for slowing aging and preserving skin structure.',
+                date: 'Jan 2',
+                link: 'blog-anti-aging-ingredients.html',
+                img: 'https://images.unsplash.com/photo-1570172619644-dfd03ed5d881?w=400&q=80'
+            },
+            {
                 cat: 'finance',
                 title: 'Medical Real Estate: Equity Strategies',
                 excerpt: 'Building wealth through physician facility ownership.',
