--- a/blog-retinoids-evolution.html
+++ b/blog-retinoids-evolution.html
@@ -100,7 +100,7 @@
         <img src="https://images.unsplash.com/photo-1556228852-80cd3b6e5d36?w=1200&q=80" alt="Retinoids: From Acne Treatment to Cornerstone of Modern Dermatology" class="featured-image">
         
         <article class="article-content">
-            <p>Few classes of medications have shaped dermatology as profoundly as retinoids. Originally developed to treat acne, retinoids have evolved into foundational therapies for photoaging, pigmentary disorders, and certain skin cancers. Their longevity is not accidental—it reflects a deep and expanding understanding of skin biology.</p>
+            <p>Few classes of medications have shaped dermatology as profoundly as retinoids. Originally developed to treat acne, retinoids have evolved into foundational therapies for photoaging, pigmentary disorders, and certain skin cancers. Their longevity is not accidental - it reflects a deep and expanding understanding of skin biology.</p>
             <h2>The Early Era: Vitamin A and Acne</h2>
             <p>The story of retinoids begins with vitamin A and its role in epithelial differentiation. In the 1960s and 1970s, topical tretinoin was introduced for acne, demonstrating an ability to normalize follicular keratinization and reduce comedone formation.</p>
             <p>This marked a turning point. For the first time, acne could be treated by modifying the underlying biology of the skin rather than simply suppressing inflammation or bacteria.</p>
@@ -126,7 +126,7 @@
             <p>The goal shifted from short-term correction to sustainable, lifelong skin health.</p>
             <h2>Over-the-Counter and Medical Grade Convergence</h2>
             <p>In recent years, retinoids have moved beyond prescription-only use. Adapalene became available over the counter, and cosmetic formulations of retinol and retinaldehyde gained popularity.</p>
-            <p>While not equivalent to prescription tretinoin, these products broadened access and introduced retinoids to a wider audience—often earlier in life, where long-term benefit is greatest.</p>
+            <p>While not equivalent to prescription tretinoin, these products broadened access and introduced retinoids to a wider audience - often earlier in life, where long-term benefit is greatest.</p>
             <h2>What’s New: Modern Retinoid Science</h2>
             <p>Current innovation focuses less on discovering entirely new molecules and more on improving delivery, tolerability, and precision.</p>
             <p>Key areas of development include:</p>
