--- a/blog-retinoids-evolution.html
+++ b/blog-retinoids-evolution.html
@@ -89,15 +89,15 @@
         <h1>Retinoids: From Acne Treatment to Cornerstone of Modern Dermatology</h1>
         <div class="article-meta">
             <span>Dr. Quoc-Bao Nguyen</span>
-            <span>•</span>
+            <span>&bull;</span>
             <span>January 12, 2026</span>
-            <span>•</span>
+            <span>&bull;</span>
             <span>8 min read</span>
         </div>
     </header>
 
     <div class="article-container">
-        <img src="https://images.unsplash.com/photo-1556228852-80cd3b6e5d36?w=1200&q=80" alt="Retinoids: From Acne Treatment to Cornerstone of Modern Dermatology" class="featured-image">
+        <img src="https://images.unsplash.com/photo-1556228852-80cd3b6e5d36?w=1200&q=80" alt="" class="featured-image">
         
         <article class="article-content">
             <p>Few classes of medications have shaped dermatology as profoundly as retinoids. Originally developed to treat acne, retinoids have evolved into foundational therapies for photoaging, pigmentary disorders, and certain skin cancers. Their longevity is not accidental - it reflects a deep and expanding understanding of skin biology.</p>
