--- a/blogs.html
+++ b/blogs.html
@@ -133,6 +133,22 @@
         const allPosts = [
             {
                 cat: 'medical',
+                title: 'Mohs Micrographic Surgery: Precision Skin Cancer Treatment',
+                excerpt: 'Specialized technique offering highest cure rates while preserving healthy tissue.',
+                date: 'Jan 20',
+                link: 'blog-mohs-surgery.html',
+                img: 'https://images.unsplash.com/photo-1579154204601-01588f351e67?w=400&q=80'
+            },
+            {
+                cat: 'medical',
+                title: 'Dermoscopy and the Promise & Limits of Artificial Intelligence',
+                excerpt: 'How AI enhances dermoscopy while respecting the limits of automation.',
+                date: 'Jan 17',
+                link: 'blog-dermoscopy-ai.html',
+                img: 'https://images.unsplash.com/photo-1576091160550-2173dba999ef?w=400&q=80'
+            },
+            {
+                cat: 'medical',
                 title: 'Antioxidants in Dermatology: Protecting Skin at the Molecular Level',
                 excerpt: 'How antioxidants neutralize free radicals and enhance long-term skin health.',
                 date: 'Jan 14',
