--- a/blog-mohs-surgery.html
+++ b/blog-mohs-surgery.html
@@ -101,7 +101,7 @@
     </header>
 
     <div class="article-container">
-        <img src="https://images.unsplash.com/photo-1581594693702-fbdc51b2763b?w=1200&q=80" alt="" class="featured-image">
+        <img src="mohs-surgery-diagram.jpg" alt="" class="featured-image">
         
         <article class="article-content">
             <p>Mohs micrographic surgery is a specialized technique for treating certain skin cancers with the highest possible cure rate while preserving as much healthy tissue as possible. It is particularly valuable for cancers on the face and other anatomically or functionally sensitive areas.</p>
