--- a/blog-mohs-surgery.html
+++ b/blog-mohs-surgery.html
@@ -172,7 +172,7 @@
         </article>
 
         <div class="author-bio">
-            <img src="../profile-photo.jpg" alt="Dr. Quoc-Bao Nguyen" class="author-avatar-large">
+            <img src="profile-photo.jpg" alt="Dr. Quoc-Bao Nguyen" class="author-avatar-large">
             <div class="author-info">
                 <h4>Dr. Quoc-Bao Nguyen, MD</h4>
                 <p>Board-certified dermatologist specializing in medical, surgical, and cosmetic dermatology. Dr. Nguyen combines clinical expertise with evidence-based approaches to deliver optimal patient outcomes.</p>
