--- a/blogs.html
+++ b/blogs.html
@@ -137,7 +137,7 @@
                 excerpt: 'Specialized technique offering highest cure rates while preserving healthy tissue.',
                 date: 'Jan 20',
                 link: 'blog-mohs-surgery.html',
-                img: 'https://images.unsplash.com/photo-1581594693702-fbdc51b2763b?w=400&q=80'
+                img: 'mohs-surgery-diagram.jpg'
             },
             {
                 cat: 'medical',
