--- a/blogs.html
+++ b/blogs.html
@@ -145,7 +145,7 @@
                 excerpt: 'How AI enhances dermoscopy while respecting the limits of automation.',
                 date: 'Jan 17',
                 link: 'blog-dermoscopy-ai.html',
-                img: 'https://images.unsplash.com/photo-1559757175-5700dde675bc?w=400&q=80'
+                img: 'dermoscopy-ai-image.webp'
             },
             {
                 cat: 'medical',
