--- a/blog-dermoscopy-ai.html
+++ b/blog-dermoscopy-ai.html
@@ -97,7 +97,7 @@
     </header>
 
     <div class="article-container">
-        <img src="https://images.unsplash.com/photo-1559757175-5700dde675bc?w=1200&q=80" alt="" class="featured-image">
+        <img src="dermoscopy-ai-image.webp" alt="" class="featured-image">
         
         <article class="article-content">
             <p>Dermoscopy changed dermatology by letting us see what the naked eye cannot. Pigment networks, vascular patterns, symmetry, and subtle structural clues often reveal diagnostic signals long before a lesion looks obviously concerning. When used correctly, dermoscopy improves accuracy, reduces unnecessary biopsies, and refines clinical judgment.</p>
@@ -127,7 +127,7 @@
         </article>
 
         <div class="author-bio">
-            <img src="../profile-photo.jpg" alt="Dr. Quoc-Bao Nguyen" class="author-avatar-large">
+            <img src="profile-photo.jpg" alt="Dr. Quoc-Bao Nguyen" class="author-avatar-large">
             <div class="author-info">
                 <h4>Dr. Quoc-Bao Nguyen, MD</h4>
                 <p>Board-certified dermatologist specializing in medical, surgical, and cosmetic dermatology. Dr. Nguyen combines clinical expertise with evidence-based approaches to deliver optimal patient outcomes.</p>
