--- a/blog-antioxidants-dermatology.html
+++ b/blog-antioxidants-dermatology.html
@@ -97,7 +97,7 @@
     </header>
 
     <div class="article-container">
-        <img src="https://images.unsplash.com/photo-1556228720-195a672e8a03?w=1200&q=80" alt="Antioxidants in Dermatology: Protecting Skin at the Molecular Level" class="featured-image">
+        <img src="antioxidants-diagram.png" alt="" class="featured-image">
         
         <article class="article-content">
             <p>Skin is constantly exposed to oxidative stress. Ultraviolet radiation, visible light, pollution, and inflammation generate free radicals that damage cellular structures, degrade collagen, and accelerate aging. Antioxidants work by neutralizing these reactive molecules before they cause cumulative harm.</p>
@@ -153,7 +153,7 @@
         </article>
 
         <div class="author-bio">
-            <img src="../profile-photo.jpg" alt="Dr. Quoc-Bao Nguyen" class="author-avatar-large">
+            <img src="profile-photo.jpg" alt="Dr. Quoc-Bao Nguyen" class="author-avatar-large">
             <div class="author-info">
                 <h4>Dr. Quoc-Bao Nguyen, MD</h4>
                 <p>Board-certified dermatologist specializing in medical, surgical, and cosmetic dermatology. Dr. Nguyen combines clinical expertise with evidence-based approaches to deliver optimal patient outcomes.</p>
