--- a/blogs.html
+++ b/blogs.html
@@ -153,7 +153,7 @@
                 excerpt: 'How antioxidants neutralize free radicals and enhance long-term skin health.',
                 date: 'Jan 14',
                 link: 'blog-antioxidants-dermatology.html',
-                img: 'https://images.unsplash.com/photo-1556228720-195a672e8a03?w=400&q=80'
+                img: 'antioxidants-diagram.png'
             },
             {
                 cat: 'aesthetics',
