--- a/blog-antioxidants-dermatology.html
+++ b/blog-antioxidants-dermatology.html
@@ -36,7 +36,7 @@
         .article-meta { display: flex; gap: 2rem; justify-content: center; align-items: center; flex-wrap: wrap; font-size: 0.95rem; opacity: 0.9; }
         
         .article-container { max-width: 800px; margin: 4rem auto; padding: 0 2rem; }
-        .featured-image { width: 100%; max-height: 500px; object-fit: cover; border-radius: 15px; margin-bottom: 3rem; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1); }
+        .featured-image { width: 100%; max-height: 500px; object-fit: contain; border-radius: 15px; margin-bottom: 3rem; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1); }
         
         .article-content { font-size: 0.95rem; line-height: 1.9; color: #333; }
         .article-content h2 { font-family: 'Playfair Display', serif; font-size: 1.6rem; color: var(--navy); margin: 3rem 0 1.5rem 0; line-height: 1.3; }
