--- a/blogs.html
+++ b/blogs.html
@@ -132,6 +132,30 @@
     <script>
         const allPosts = [
             {
+                cat: 'aesthetics',
+                title: 'Neuromodulators in Aesthetic Dermatology',
+                excerpt: 'Enhancing balance and expression through thoughtful neuromodulator use.',
+                date: 'Jan 29',
+                link: 'blog-neuromodulators.html',
+                img: 'neuromodulator-diagram.jpg'
+            },
+            {
+                cat: 'medical',
+                title: 'Biologics in Inflammatory Skin Disease: Precision Therapy',
+                excerpt: 'Targeted intervention for eczema, psoriasis, and hidradenitis suppurativa.',
+                date: 'Jan 26',
+                link: 'blog-biologics.html',
+                img: 'biologics-diagram.jpg'
+            },
+            {
+                cat: 'leadership',
+                title: 'Mentorship in Medicine and Dermatology: Supporting the Next Generation',
+                excerpt: 'Passing forward clinical judgment and experience to students and residents.',
+                date: 'Jan 23',
+                link: 'blog-mentorship.html',
+                img: 'mentorship-image.png'
+            },
+            {
                 cat: 'medical',
                 title: 'Mohs Micrographic Surgery: Precision Skin Cancer Treatment',
                 excerpt: 'Specialized technique offering highest cure rates while preserving healthy tissue.',
